--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
+  "engines": {
+    "node": ">=14"
+  },
   "dependencies": {
     "commander": "^7.1.0",
     "lodash": "^4.17.21"
