--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "commander": "^7.1.0",
+    "js-yaml": "^4.0.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
